--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,10 +47,28 @@
 }
 
 body {
-  background-color: #fdf9fd;
+  background-color: #3d6645;
+  background-image: url("./assets/higherlowerbg3.png");
+  background-size:cover;
   color: #011a32;
   font: 16px/1.25 "Raleway", sans-serif;
   text-align: center;
+  overflow: hidden;
+}
+
+.footer{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+#bgTopRight{
+  position: absolute;
+  top: 0;
+  right: 30px;
+  height:80%;
+  opacity:0.6;
 }
 
 #higher {
@@ -72,9 +89,9 @@ body {
 }
 
 #spotify {
-  color: #574080;
-  font-size: 1.4em;
-  font-weight: 200;
+  color: #29cc47;
+  font-size: 2em;
+  font-weight: 600;
   letter-spacing: 0.3rem;
   position: absolute;
   bottom: -20px;
