landing page färdig typ

--- a/src/BubblyButton.scss
+++ b/src/BubblyButton.scss
@@ -1,7 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,700,900,400italic,700italic,900italic);
 
 $lilac: #574080;
-$button-bg: $lilac;
+$navy: #5C00FF;
+$button-bg: $navy;
 $button-text-color: #fff;
 
 
