--- a/src/App.css
+++ b/src/App.css
@@ -164,3 +164,11 @@ body {
     transition: none !important;
   }
 }
+
+
+.imagetext-1{
+  position: absolute;
+  top: 60%;
+  left: 30%;
+  transform: translate(-50%, -50%);
+}
