--- a/src/App.css
+++ b/src/App.css
@@ -302,3 +302,21 @@ img.dimmed {
 .lower-button:hover .unidown {
   color: white;
 }
+
+.score{
+  position: absolute;
+  top: 90%;
+  left: 4%;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size:1.7rem;
+}
+
+.hiscore{
+  position: absolute;
+  top: 90%;
+  right: 4%;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size:1.7rem;
+}
