--- a/src/App.css
+++ b/src/App.css
@@ -320,3 +320,51 @@ img.dimmed {
   font-weight: 700;
   font-size:1.7rem;
 }
+
+.custom-modal{
+  background-color:whitesmoke;
+  border-color:#5C00FF;
+  border-width: 5px;
+  box-shadow: 0 0 0 max(100vh, 100vw) rgba(0, 0, 0, .6);
+}
+ .modal-close{
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size:1rem;
+  color:black;
+  border-color:#FF8800;
+  border-radius: 5px;
+ }
+
+ .modal-close:hover{
+  background-color:#FF8800;
+  color:white;
+ }
+
+ .modal-playagain{
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size:1rem;
+  color:black;
+  border-color:#00FF2F;
+  border-radius: 5px;
+ }
+
+ .modal-playagain:hover{
+  background-color:#00FF2F;
+  color:white;
+ }
+
+ .modal-leaderboard{
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size:1rem;
+  color:black;
+  border-color:#5C00FF;
+  border-radius: 5px;
+ }
+
+ .modal-leaderboard:hover{
+  background-color:#5C00FF;
+  color:white;
+ }
